# next-fastapi-sse

./: .env.development  .gitignore  .shellcheckrc  LICENSE  NOTICE  README.md  cache.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
app/: layout.tsx  logger.ts  page.tsx  sse.tsx
app/sse/: main.tsx  page.tsx  provider.tsx  types.ts
app/streaming/: item.tsx  page.tsx
backend/: .flake8  pyproject.toml  sse-client.py
backend/backend/: logging.py  main.py  producer.py  worker.py
backend/backend/worker/: __main__.py  config.py  main.py  multiprocess.py  reload.py  subprocess.py  worker.py
pages/api/: (kafka).ts  events.ts
pages/api/cache/: clear.ts  get.ts
pages/api/events/: [subscriberId].ts
pages/api/stream/: [index].ts
pages/api/stream/[subscriberId]/: [index].ts
scripts/: dev.sh
scripts/backend/: dev.sh
scripts/topics/: create.sh
scripts/worker/: dev.sh  run.sh
